# terminal-mcp

./: Cargo.toml
src/: buffered_executor.rs  error.rs  lib.rs  main.rs  service.rs  terminal.rs
