[package]
name = "terminal-mcp"
version = "0.1.0"
edition = "2021"


[dependencies]
pty-process = { version = "0.5", features = ["async"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "transport-io",
  "server",
] }
schemars = "1"

[dev-dependencies]
env_logger = "0.11"
